refactor(navbar): update navbar style

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -2,6 +2,10 @@
 // Navbar and Drawer
 // -----------------------------------------------------------------------------
 
+.navbar {
+  background-image: none;
+}
+
 // Toggler themes
 // see components/_buttons.scss
 // see components/_misc.scss
