--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,7 +38,7 @@
 @import "../../node_modules/bootstrap/scss/buttons";
 @import "../../node_modules/bootstrap/scss/transitions";
 @import "../../node_modules/bootstrap/scss/dropdown";
-@import "../../node_modules/bootstrap/scss/button-group";
+// --- @import "../../node_modules/bootstrap/scss/button-group";
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
 @import "../../node_modules/bootstrap/scss/card";
@@ -76,6 +76,7 @@
 
 @import "components/basic";
 @import "components/buttons";
+@import "components/navbar";
 @import "components/offcanvas";
 @import "components/hero";
 @import "components/header";
