--- a/src/views/modules/navbar/_navbar.pug
+++ b/src/views/modules/navbar/_navbar.pug
@@ -1,5 +1,5 @@
 //- modules/navbar/_navbar.pug
-nav.navbar.fixed-top.navbar-dark.bg-transparent
+nav.navbar.fixed-top.bg-transparent
   .container-fluid
     .navbar-menu
       button.btn.btn-toggler(
