refactor(module): drop unnecessary BS styles

--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -6,7 +6,7 @@
       .modal-header
         h4.modal-title#GetQuoteModalLabel Contact us
         button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close Modal")
-          span.sr-only Close
+          span.visually-hidden Close
 
       .modal-body
         p If you have any type of questions do not hesitate to contact us!
