--- a/src/views/includes/misc/_back-to-top.pug
+++ b/src/views/includes/misc/_back-to-top.pug
@@ -1,7 +1,7 @@
 //- includes/misc/_back-to-top.pug
 .back-to-top
   .back-to-top-icon.d-flex(aria-label="Go to top")
-    //- span.sr-only Go to top
+    //- span.visually-hidden Go to top
     //- i.fas.fa-chevron-up.fa-fw
     img.svg-inline--fa.fa-w-16#fa-chevron-up(src="fonts/svgs/solid/chevron-up.svg" alt="Up" inline)
     //- svg.svg-inline--fa.fa-w-16#fa-chevron-up: use(xlink:href="fonts/sprites/solid.svg#chevron-up")
