--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -17,7 +17,7 @@ section.contact#contact
           //- HONEYPOT FIELD
           .form-group.d-none
             .input
-              label(for="contact-bot-field") Don’t fill this out if you're human
+              label(for="contact-bot-field") Don't fill this out if you're human
               input.form-control#contact-bot-field(type="text" name="bot-field" autocomplete="off")
 
           .form-group.mb-3
