--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -14,7 +14,7 @@ section.newsletter.text-center#newsletter
           //- HONEYPOT FIELD
           .d-none
             input.form-control#news-bot-field(type="text" name="bot-field" autocomplete="off")
-            label(for="news-bot-field") Don’t fill this out if you're human
+            label(for="news-bot-field") Don't fill this out if you're human
 
           .w-100
 
