--- a/src/views/includes/misc/_get-in-touch.pug
+++ b/src/views/includes/misc/_get-in-touch.pug
@@ -1,5 +1,5 @@
 //- includes/misc/_get-in-touch.pug
-button.btn.btn-lg.get-in-touch.text-uppercase(
+button.btn.btn-info.btn-lg.get-in-touch.text-uppercase(
   type="button"
   data-bs-toggle="modal"
   data-bs-target="#GetQuoteModal"
