fix(colors): update color scheme

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -2,7 +2,7 @@
 // Buttons
 // -----------------------------------------------------------------------------
 
-$btn-orange: rgba($primary-color, 1);
+$btn-orange: rgba($base-color, 1);
 
 .btn-toggler {
   padding: .5rem;
