--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .cards {
+  // background-color: var(--ad-body-bg);
   display: flex;
   justify-content: center;
   padding: 3.5rem 0;
