--- a/src/scss/components/_features.scss
+++ b/src/scss/components/_features.scss
@@ -4,8 +4,8 @@
 
 .features {
   // NOTE: see `pages/_pages.scss`
-  // background-color: var(--background-color-normal);
-  // color: var(--text-color);
+  // background-color: var(--ad-bg-normal);
+  // color: var(--ad-text-color);
 
   @media (min-width: 1920px) {
     .container {
