--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,8 +3,8 @@
 // -----------------------------------------------------------------------------
 
 .footer {
+  // background-color: var(--ad-body-bg);
   position: relative;
-  background-color: var(--body-background-color);
   color: $grey-100;
 }
 
