--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -4,6 +4,6 @@
 
 .newsletter {
   // NOTE: see `pages/_pages.scss`
-  // background-color: var(--background-color-dark);
-  // color: var(--text-color);
+  // background-color: var(--ad-bg-medium);
+  // color: var(--ad-text-color);
 }
