--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -8,22 +8,24 @@
 .newsletter,
 .portfolio,
 .services {
-  color: var(--text-color);
+  color: var(--ad-text-color);
 }
 
-.contact,
-.portfolio,
-.services {
-  background-color: var(--body-background-color);
-}
-
-.carousel-portfolio {
-  background-color: var(--background-color-medium);
-}
+// .contact,
+// .portfolio,
+// .services,
+// .testimonials {
+//   background-color: var(--ad-body-bg);
+// }
 
 .features,
-.newsletter {
-  background-color: var(--background-color-dark);
+.technologies {
+  background-color: var(--ad-bg-normal);
+}
+
+.newsletter,
+.carousel-portfolio {
+  background-color: var(--ad-bg-medium);
 }
 
 .picture-wrapper {
