--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -80,4 +80,4 @@ section.contact#contact
 
           .mt-4.text-center
             button.btn.btn-info.me-1(type="submit" aria-label="Submit Contact") Submit
-            button.btn.btn-outline-light(type="reset" aria-label="Cancel Contact") Cancel
+            button.btn.btn-secondary(type="reset" aria-label="Cancel Contact") Cancel
