--- a/src/views/includes/misc/_copyright.pug
+++ b/src/views/includes/misc/_copyright.pug
@@ -1,4 +1,4 @@
 //- includes/misc/_copyright.pug
 - year = new Date().getFullYear();
 
-p.text-center.mb-0 &copy; #{year} Adorade
+p.copyright.text-center.mb-0 &copy; #[span #{year} Adorade]
