--- a/src/views/modules/offcanvas/_offcanvas.pug
+++ b/src/views/modules/offcanvas/_offcanvas.pug
@@ -4,8 +4,9 @@ include ../../mixins/_pictures
 
 .offcanvas.offcanvas-start#main-menu(tabindex="-1" aria-labelledby="menuLogo")
   .offcanvas-header
-    h5.menu-logo.mb-0#menuLogo
-      +menuLogo("logo-drawer", "Adorade")
+    .menu-logo.text-center#menuLogo
+      h2.display-5.mb-0 Adorade
+      p.mb-0 Your Web design
     button.btn-close(type="button" data-bs-dismiss="offcanvas" aria-label="Close Main Menu")
 
   .offcanvas-body
