--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .hero {
+  // background-color: var(--ad-body-bg);
   padding: 0;
 }
 
@@ -48,7 +49,7 @@
   .hero-content {
     width: auto;
     height: auto;
-    color: $primary-color;
+    color: $base-color;
     text-shadow: 10px 10px 15px $black;
   }
 
