--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -53,7 +53,7 @@
     overflow: hidden;
     border-radius: .25rem;
     border-radius: var(--bs-border-radius);
-    background-color: rgba($gray, .5);
+    background-color: rgba($base-gray, .5);
     color: #f8f9fa;
     font-size: 1.25rem;
     text-align: center;
@@ -65,7 +65,7 @@
     }
 
     &:hover {
-      background-color: rgba($gray, .9);
+      background-color: rgba($base-gray, .9);
       transition: .5s;
     }
   }
@@ -76,7 +76,7 @@
     left: 0;
     width: 100%;
     height: 0%;
-    background-color: rgba($primary-color, .7);
+    background-color: rgba($base-color, .7);
   }
 }
 
@@ -131,7 +131,7 @@
 
     &.active,
     &:active {
-      --bs-dropdown-link-active-bg: #{$primary-color};
+      --bs-dropdown-link-active-bg: #{$base-color};
     }
 
     &:hover,
@@ -146,5 +146,14 @@
         display: block !important;
       }
     }
+  }
+}
+
+
+.copyright {
+  color: $base-color;
+
+  span {
+    font-family: Aclonica, sans-serif;
   }
 }
