--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -7,8 +7,13 @@
 }
 
 .modal-content {
-  background-color: var(--body-background-color);
+  background-color: var(--ad-bg-normal);
   box-shadow: 0 0 10px $buttons-color;
+}
+
+.modal-content,
+.modal-header {
+  border-radius: unset;
 }
 
 // .modal-quote-error {
