--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .testimonials {
-  background-color: var(--body-background-color);
-  color: var(--text-color);
+  // NOTE: see `pages/_pages.scss`
+  // background-color: var(--ad-body-bg);
+  // color: var(--ad-text-color);
 }
