--- a/src/scss/includes/_colors.scss
+++ b/src/scss/includes/_colors.scss
@@ -299,16 +299,16 @@ $blue-grey-800   : #37474f;
 $blue-grey-900   : #263238;
 
 // --------------------------
-$black           : #000000;
-$gray-100        : #f8f9fa;
-$gray-200        : #e9ecef;
-$gray-300        : #dee2e6;
-$gray-400        : #ced4da;
-$gray-500        : #adb5bd;
-$gray-600        : #6c757d;
-$gray-700        : #495057;
-$gray-800        : #343a40;
-$gray-900        : #212529;
-$white           : #ffffff;
+// $black           : #000000;
+// $gray-100        : #f8f9fa;
+// $gray-200        : #e9ecef;
+// $gray-300        : #dee2e6;
+// $gray-400        : #ced4da;
+// $gray-500        : #adb5bd;
+// $gray-600        : #6c757d;
+// $gray-700        : #495057;
+// $gray-800        : #343a40;
+// $gray-900        : #212529;
+// $white           : #ffffff;
 
 // fusv-enable
