--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -29,7 +29,7 @@ section.newsletter.text-center#newsletter
               .invalid-feedback Please enter a valid name.
 
             .col
-              input.form-control.rounded-0#news-email(
+              input.form-control.rounded-0.border-left#news-email(
                 type="email" name="email" placeholder="your@email.here"
                 pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$"
                 autocomplete="email"
