--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -12,7 +12,9 @@ section.contact#contact
         .form-response.alert.shadow-lg.d-none
 
         form.needs-validation.p-4.shadow-lg#contact-form(
-          name="contact-form" method="POST" action="/thanks/contact.html" netlify-honeypot="bot-field" netlify novalidate)
+          name="contact-form" method="POST" action="contact.html" netlify-honeypot="bot-field" netlify novalidate)
+
+          input(type="hidden" name="form-name" value="contact-form")
 
           //- HONEYPOT FIELD
           .form-group.d-none
@@ -24,7 +26,7 @@ section.contact#contact
             .input
               input.form-control#contact-name(
                 type="text" name="name" maxlength="50" placeholder="Your name"
-                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$" autocomplete="name"
+                pattern="^[a-zA-Z][a-zA-Z\\-' ]{1,50}[a-zA-Z']{0,1}$" autocomplete="name"
                 title="Please enter a valid name." aria-label="Your name" required)
               label(for="contact-name") Name #[span.required *]
               .valid-feedback Looks good!
