--- a/src/scss/mixins/_forms.scss
+++ b/src/scss/mixins/_forms.scss
@@ -1,31 +1,16 @@
 //
-// Mixins - Forms
+// Mixins - Form validation states.
+// Generate the form validation CSS for warnings, errors, and successes.
 // -----------------------------------------------------------------------------
 
-// Form validation states.
-// Generate the form validation CSS for warnings, errors, and successes.
 @mixin formarea-validation-state($state, $color) {
   .form-control {
-    .was-validated &:#{$state},
-    &.is-#{$state} {
-
+    .was-validated #{if(&, "&", "")}:#{$state},
+    #{if(&, "&", "")}.is-#{$state} {
       ~ label {
         border-color: $color;
         background-color: $color;
-        color: $white;
-
-        &:focus {
-          border-color: $color;
-        }
       }
-    }
-  }
-
-  // stylelint-disable-next-line selector-no-qualifying-type
-  textarea.form-control {
-    .was-validated &:#{$state},
-    &.is-#{$state} {
-      // code here
     }
   }
 }
