--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -3,88 +3,77 @@
 .modal.fade#GetQuoteModal(tabindex="-1" role="dialog" aria-labelledby="GetQuoteModalLabel" aria-hidden="true")
   .modal-dialog.modal-dialog-centered(role="document")
     .modal-content
-      .modal-header
+      .modal-header.px-4
         h4.modal-title#GetQuoteModalLabel Contact us
         button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close Modal")
           span.visually-hidden Close
 
-      .modal-body
+      .modal-body.px-4
         p If you have any type of questions do not hesitate to contact us!
 
-        //- the form result (success or error) will be rendered inside `.form-response`
         .form-response.alert.shadow-lg.d-none
 
         form.needs-validation#modal-get-quote(
-          name="modal-get-quote" method="POST" action="modal.html" netlify-honeypot="bot-field" netlify novalidate)
+          name="modal-get-quote" method="POST" action="/thanks/modal.html" netlify-honeypot="bot-field" netlify novalidate)
 
           input(type="hidden" name="form-name" value="modal-get-quote")
 
-          //- HONEYPOT FIELD
-          .form-group.d-none
-            .input
-              label(for="modal-bot-field") Don't fill this out if you're human
-              input.form-control#modal-bot-field(type="text" name="bot-field" autocomplete="off")
+          .d-none
+            label.form-label(for="modal-bot-field") Don't fill this out if you're human
+            input.form-control#modal-bot-field(type="text" name="bot-field" autocomplete="off")
 
-          .form-group.mb-3
-            .input
-              input.form-control#modal-name(
-                type="text" name="name" maxlength="50" placeholder="Your name"
-                pattern="^[a-zA-Z][a-zA-Z\\-' ]{1,50}[a-zA-Z']{0,1}$" autocomplete="name"
-                title="Please enter a valid name." aria-label="Your name" required)
-              label(for="modal-name") Name #[span.required *]
-              .valid-feedback Looks good!
-              .invalid-feedback Please enter a valid name.
+          .mb-3.position-relative
+            input.form-control#modal-name(
+              type="text" name="name" maxlength="50" placeholder="Your name"
+              pattern="^[a-zA-Z][a-zA-Z\\-' ]{1,50}[a-zA-Z']{0,1}$" autocomplete="name"
+              title="Please enter a valid name." aria-label="Your name" required)
+            label.form-label(for="modal-name") Name #[span(aria-label="required") *]
+            .valid-feedback Looks good!
+            .invalid-feedback Please enter a valid name.
 
-          .form-group.mb-3
-            .input
-              input.form-control#modal-email(
-                type="email" name="email" maxlength="100" placeholder="Your email"
-                pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\\.([a-z]+){2,10}$"
-                autocomplete="email"
-                title="Please enter a valid email" aria-label="Your email" required)
-              label(for="modal-email") Email #[span.required *]
-              .valid-feedback Looks good!
-              .invalid-feedback Please enter a valid email.
+          .mb-3.position-relative
+            input.form-control#modal-email(
+              type="email" name="email" maxlength="100" placeholder="Your email"
+              pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\\.([a-z]+){2,10}$"
+              autocomplete="email"
+              title="Please enter a valid email" aria-label="Your email" required)
+            label.form-label(for="modal-email") Email #[span(aria-label="required") *]
+            .valid-feedback Looks good!
+            .invalid-feedback Please enter a valid email.
 
-          .form-group.mb-3
-            .input
-              input.form-control#modal-phone(
-                type="tel" name="phone" maxlength="20" placeholder="Your phone"
-                pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$"
-                autocomplete="tel"
-                title="0000 000 000 or +40 000 000 000." aria-label="Your phone" required)
-              label(for="modal-phone") Phone #[span.required *]
-              .valid-feedback Looks good!
-              .invalid-feedback Please enter a valid phone.
+          .mb-3.position-relative
+            input.form-control#modal-phone(
+              type="tel" name="phone" maxlength="20" placeholder="Your phone"
+              pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$"
+              autocomplete="tel"
+              title="0123 456 789 or +40 123 456 789." aria-label="Your phone" required)
+            label.form-label(for="modal-phone") Phone #[span(aria-label="required") *]
+            .valid-feedback Looks good!
+            .invalid-feedback Please enter a valid phone.
 
-          .form-group.mb-3
-            .input
-              input.form-control#modal-subject(
-                type="text" name="subject" maxlength="100" placeholder="Your subject"
-                pattern=".{1,100}"
-                title="Maximum 100 characters." aria-label="Your subject" required)
-              label(for="modal-subject") Subject #[span.required *]
-              .valid-feedback Looks good!
-              .invalid-feedback Please enter a valid subject.
+          .mb-3.position-relative
+            input.form-control#modal-subject(
+              type="text" name="subject" maxlength="100" placeholder="Your subject"
+              pattern="^[a-zA-Z][a-zA-Z0-9\\-' ?!]{1,100}[a-zA-Z0-9'!?]{0,1}$"
+              title="Maximum 100 characters." aria-label="Your subject" required)
+            label.form-label(for="modal-subject") Subject #[span(aria-label="required") *]
+            .valid-feedback Looks good!
+            .invalid-feedback Please enter a valid subject.
 
-          .form-group.mb-3
-            .input
-              textarea.form-control#modal-message(
-                name="message" rows="6" maxlength="600" placeholder="Your message"
-                title="Maximum 600 characters." aria-label="Your message" required)
-              label(for="modal-message") Message #[span.required *]
-              .valid-feedback Looks good!
-              .invalid-feedback Please enter a valid message.
+          .mb-3.position-relative
+            textarea.form-control#modal-message(
+              name="message" rows="6" maxlength="600" placeholder="Your message"
+              title="Maximum 600 characters." aria-label="Your message" required)
+            label.form-label(for="modal-message") Message #[span(aria-label="required") *]
+            .valid-feedback Looks good!
+            .invalid-feedback Please enter a valid message.
 
-          .form-group
-            .form-check
-              input.form-check-input#modal-terms-check(type="checkbox" value="" required)
-              label.form-check-label(for="modal-terms-check") Agree to terms and conditions
-              .valid-feedback Looks good!
-              .invalid-feedback You must agree before submitting.
+          .form-check
+            input.form-check-input#modal-terms-check(type="checkbox" value="" required)
+            label.form-check-label(for="modal-terms-check") Agree to terms and conditions
+            .valid-feedback Looks good!
+            .invalid-feedback You must agree before submitting.
 
           .mt-4.text-center
-            button.btn.btn-info.me-1(type="submit" aria-label="Submit Get Quote") Submit
+            button.btn.btn-info(type="submit" aria-label="Submit Get Quote") Submit
             button.btn.btn-secondary(type="reset" aria-label="Cancel Get Quote") Cancel
-
-      //- .modal-footer
