fix(buttons): update margins for buttons

--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -74,6 +74,6 @@
             .valid-feedback Looks good!
             .invalid-feedback You must agree before submitting.
 
-          .mt-4.text-center
+          .mt-4.d-flex.gap-3.justify-content-center
             button.btn.btn-info(type="submit" aria-label="Submit Get Quote") Submit
             button.btn.btn-secondary(type="reset" aria-label="Cancel Get Quote") Cancel
