--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -36,7 +36,7 @@ section.newsletter.text-center#newsletter
             .valid-feedback Looks good!
             .invalid-feedback Please enter a valid email.
 
-          .col-12.col-lg-auto.text-center
+          .col-12.col-lg-auto.d-flex.gap-3.justify-content-center
             button.btn.btn-orange.rounded-lg-start-0(
               type="submit" aria-label="Subscribe") Subscribe
             button.btn.btn-secondary.d-lg-none(
