--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -72,6 +72,6 @@ section.contact#contact
             .valid-feedback Looks good!
             .invalid-feedback You must agree before submitting.
 
-          .mt-4.text-center
+          .mt-4.d-flex.gap-3.justify-content-center
             button.btn.btn-info(type="submit" aria-label="Submit Contact") Submit
             button.btn.btn-secondary(type="reset" aria-label="Cancel Contact") Cancel
