style(forms): change action attribute for forms

--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -12,7 +12,7 @@ section.contact#contact
         .form-response.alert.shadow-lg.d-none
 
         form.needs-validation.p-4.shadow-lg#contact-form(
-          name="contact-form" method="POST" action="/thanks/contact.html" netlify-honeypot="bot-field" netlify novalidate)
+          name="contact-form" method="POST" action="/thanks/contact" netlify-honeypot="bot-field" netlify novalidate)
 
           input(type="hidden" name="form-name" value="contact-form")
 
