--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -13,8 +13,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 3rem 0 2rem;
+  padding: 3rem 0 4.75rem;
   @include gradient-radial-circle(rgba($black, .3), rgba($black, .9));
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 2rem;
+  }
 }
 
 .footer-tags,
