--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -14,7 +14,7 @@
         .form-response.alert.shadow-lg.d-none
 
         form.needs-validation#modal-get-quote(
-          name="modal-get-quote" method="POST" action="/thanks/modal.html" netlify-honeypot="bot-field" netlify novalidate)
+          name="modal-get-quote" method="POST" action="/thanks/modal" netlify-honeypot="bot-field" netlify novalidate)
 
           input(type="hidden" name="form-name" value="modal-get-quote")
 
@@ -68,7 +68,7 @@
             .valid-feedback Looks good!
             .invalid-feedback Please enter a valid message.
 
-          .form-check
+          .form-check.mb-0
             input.form-check-input#modal-terms-check(type="checkbox" value="" required)
             label.form-check-label(for="modal-terms-check") Agree to terms and conditions
             .valid-feedback Looks good!
