--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -1,10 +1,7 @@
 //- includes/sections/_hero.pug
 section.hero#hero
   .hero-unit
-    .hero-image.skale
-    .hero-overlay
     .hero-content.text-center
-      h1.hero-title.mb-0 Adorade
-      .hero-desc
-        h2.mb-0 Your Web Design
+      h1.display-1.mb-0 Adorade
+      h2.mb-0 Your Web Design
     include ../misc/_scroll-down
